--- a/training/training.ipynb
+++ b/training/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "ef653613",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "f2d34135",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "8da4e3d7",
    "metadata": {},
    "outputs": [
@@ -135,23 +135,11 @@
       "422                Liverpool         5              0.00\n",
       "726  Wolverhampton Wanderers         5              0.00\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\MohudAlBazzaz\\AppData\\Local\\Temp\\ipykernel_16800\\2923730710.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test_df[\"relegation_proba\"] = model.predict_proba(X_test)[:, 1]\n"
-     ]
     }
    ],
    "source": [
     "train_df = df[df[\"matchday\"] <= 4]\n",
-    "test_df = df[df[\"matchday\"] == 5]\n",
+    "test_df = df[df[\"matchday\"] == 5].copy()\n",
     "\n",
     "X_train = train_df.drop(columns=[\"name\", \"relegated\"])\n",
     "y_train = train_df[\"relegated\"]\n",
@@ -170,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "a926ab5b",
    "metadata": {},
    "outputs": [],
@@ -205,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "6f3ae2aa",
    "metadata": {},
    "outputs": [
@@ -239,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "5d69cb93",
    "metadata": {},
    "outputs": [
